[package]
name = "bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.15.1"
solana-program-test = "1.15.1"
solana-sdk = "1.15.1"
spl-associated-token-account = "1.1.2"
spl-token = "3.5.0"
tokio = {version = "1.14.0", features = ["macros"]}
